objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BU_Application_1__c</fullName>
        <description>R5_R_1109</description>
        <label>BU Application 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Application_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Application_2__c</fullName>
        <label>BU Application 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_application_2_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R1_R-0228</description>
        <label>Active BUs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Values</valueSetName>
        </valueSet>
    </fields>
</CustomObject>